--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  get: ^4.6.6
   animate_do: ^3.3.4
+  font_awesome_flutter: ^10.8.0
+  google_fonts: ^6.2.1
+  go_router: ^14.6.1
+  dartz: ^0.10.1
+  dio: ^5.7.0
+  flutter_bloc: ^8.1.6
+  get_it: ^8.0.2
 
 dev_dependencies:
   flutter_test:
@@ -77,11 +83,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: GT-Sectra
+      fonts:
+        - asset: assets/fonts/GT-Sectra-Fine-Regular.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
